--- a/WeatherMetricsWebUI/src/styles.css
+++ b/WeatherMetricsWebUI/src/styles.css
@@ -5,16 +5,17 @@ html, body { height: 100%; }
 body {
   font-family: Roboto, Arial, sans-serif;
   margin: 0;
+  margin-bottom: 40px;
 }
 
 .toolbar {
-  background-color: black;
-  color: white;
+  background-color: black !important;
+  color: white !important;
 }
 
 .navtoolbar {
-  background-color: gray;
-  color: white;
+  background-color: gray !important;
+  color: white !important;
 }
 
 .basic-container {
