--- a/WeatherMetricsWebUI/src/app/layout/components/footer/footer.component.html
+++ b/WeatherMetricsWebUI/src/app/layout/components/footer/footer.component.html
@@ -1,1 +1,1 @@
-<div class="footer">&copy; 2025 Monaco Software Solutions. All rights reserved.</div>
+<div class="footer">{{currentDate | date:'yyyy-MM-dd HH:mm:ss'}}</div>
