Still Adding Services

--- a/WeatherMetricsWebUI/src/app/features/weathermetrics/components/weathermetrics/weathermetrics.component.html
+++ b/WeatherMetricsWebUI/src/app/features/weathermetrics/components/weathermetrics/weathermetrics.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<mat-table [dataSource]="weathermetricsData" class="mat-elevation-z8">
 
   <!-- Column -->
   <ng-container matColumnDef="WeatherMetricsLogId">
@@ -45,4 +45,4 @@
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+</mat-table>
