--- a/WeatherMetricsWeb/src/app/features/weathermetricsdata/components/weathermetricsdatalist/weathermetricsdatalist.component.html
+++ b/WeatherMetricsWeb/src/app/features/weathermetricsdata/components/weathermetricsdatalist/weathermetricsdatalist.component.html
@@ -3,43 +3,53 @@
   <!-- Column -->
   <ng-container matColumnDef="WeatherMetricsLogId">
     <th mat-header-cell *matHeaderCellDef> ID </th>
-    <td mat-cell *matCellDef="let element"> {{element.WeatherMetricsLogId}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.weatherMetricsLogId}} </td>
   </ng-container>
 
   <!-- Column -->
   <ng-container matColumnDef="BarometricPressure">
     <th mat-header-cell *matHeaderCellDef> Barometric Pressure </th>
-    <td mat-cell *matCellDef="let element"> {{element.BarometricPressure}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.barometricPressure}} </td>
   </ng-container>
 
   <!-- Column -->
   <ng-container matColumnDef="Humidity">
     <th mat-header-cell *matHeaderCellDef> Humidity </th>
-    <td mat-cell *matCellDef="let element"> {{element.Humidity}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.humidity}} </td>
   </ng-container>
 
   <!-- Column -->
   <ng-container matColumnDef="TemperatureCelsius">
     <th mat-header-cell *matHeaderCellDef> Temperature Celsius </th>
-    <td mat-cell *matCellDef="let element"> {{element.TemperatureCelsius}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.temperatureCelsius}} </td>
   </ng-container>
 
   <!-- Column -->
   <ng-container matColumnDef="WindSpeed">
     <th mat-header-cell *matHeaderCellDef> WindSpeed </th>
-    <td mat-cell *matCellDef="let element"> {{element.WindSpeed}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.windSpeed}} </td>
   </ng-container>
 
   <!-- Column -->
   <ng-container matColumnDef="WindDirection">
     <th mat-header-cell *matHeaderCellDef> WindDirection </th>
-    <td mat-cell *matCellDef="let element"> {{element.WindDirection}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.windDirection}} </td>
   </ng-container>
 
   <!-- Column -->
   <ng-container matColumnDef="EntryDate">
     <th mat-header-cell *matHeaderCellDef> Entry Date </th>
-    <td mat-cell *matCellDef="let element"> {{element.EntryDate}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.entryDate}} </td>
+  </ng-container>
+
+  <!-- Delete -->
+  <ng-container matColumnDef="Actions">
+      <th mat-header-cell *matHeaderCellDef> Actions </th>
+      <td mat-cell *matCellDef="let row">
+        <button mat-icon-button color="warn" (click)="deleteRow(row)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
   </ng-container>
 
 
