--- a/WeatherMetricsWeb/src/styles.css
+++ b/WeatherMetricsWeb/src/styles.css
@@ -40,3 +40,13 @@ li {
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+
+/* Material Dialog Border Radius */
+
+.mat-mdc-dialog-surface {
+  border-radius: 7px !important;
+}
+
+
