Latest Weeb API and Angular Front End Changes

--- a/WeatherMetricsWeb/src/app/features/weathermetricsdata/components/weathermetricsdatalist/weathermetricsdatalist.component.css
+++ b/WeatherMetricsWeb/src/app/features/weathermetricsdata/components/weathermetricsdatalist/weathermetricsdatalist.component.css
@@ -4,3 +4,11 @@
     margin-bottom: 10px;
 
 }
+
+.containerborder {
+
+    border-radius: 5px;
+    border-width: 2px;
+    border-style:groove;
+    padding: 5px;
+}
