--- a/WeatherMetricsWeb/src/app/features/home/components/home/home.component.html
+++ b/WeatherMetricsWeb/src/app/features/home/components/home/home.component.html
@@ -5,7 +5,7 @@
   <div class="panel-body">
 <p>The Weather Metrics Data Application is an Angular Web front end for an Weather Metrics Data Azure IoT Solution to aquire Weather Metrics from a number of Raspberry PI devices.
 This application interfaces with an ASP.NET CORE MVC Web API hosted as an app service in Azure.   Some of the features of this application will include previewing of Weather Metrics Log Data and also
-performing basic Add, Update and Delete operations to this data as well.  Eventually once an Azure IoT Hub is added to thos solution it will allow both the gathering of Weather Metrics Data from the Raspberry PI devices both gathering data and also will allow remote control of those devices as well.
+performing basic Add, Update and Delete operations to this data as well.  Eventually once an Azure IoT Hub is added to this solution it will allow both the gathering of Weather Metrics Data from the Raspberry PI devices both gathering data and also will allow remote control of those devices as well.
 </p>    
   </div>
 </div>
