--- a/WeatherMetricsWeb/src/app/features/weathermetricsdata/components/weathermetricsdatadetail/weathermetricsdatadetail.component.html
+++ b/WeatherMetricsWeb/src/app/features/weathermetricsdata/components/weathermetricsdatadetail/weathermetricsdatadetail.component.html
@@ -1,45 +1,61 @@
-<form [formGroup]="webForm" (ngSubmit)="onSubmit()">
 
-<div class="form-group">
+
+
+<form [formGroup]="webForm" (ngSubmit)="onSubmit()" class="form">
+
+<h3>Weather Metric Log</h3>
+<div class="containerborder">
+
+<div class="form-group mb-3 col-md-3">
     <label for="barometricPressure">Barometric Pressure:</label>
-    <input id="barometricPressure" type="number" formControlName="barometricPressure">
+    <input id="barometricPressure" type="number" formControlName="barometricPressure" class="form-control" >
     <div *ngIf="webForm.get('barometricPressure')?.invalid && webForm.get('barometricPressure')?.touched" class="error-message">
       Barometric Pressure is required.
     </div>
   </div>
 
-<div class="form-group">
-    <label for="humidity">Humidity:</label>
-    <input id="humidity" type="number" formControlName="humidity">
+<div class="form-group mb-3 col-md-3">
+    <label for="humidity" class="form-label" >Humidity:</label>
+    <input id="humidity" type="number" formControlName="humidity" class="form-control">
     <div *ngIf="webForm.get('humidity')?.invalid && webForm.get('humidity')?.touched" class="error-message">
       Humidity is required.
     </div>
   </div>
 
-<div class="form-group">
-    <label for="temperatureCelsius">Temperature in Celsius:</label>
-    <input id="temperatureCelsius" type="number" formControlName="temperatureCelsius">
+<div class="form-group mb-3 col-md-3">
+    <label for="temperatureCelsius" class="form-label" >Temperature in Celsius:</label>
+    <input id="temperatureCelsius" type="number" formControlName="temperatureCelsius" class="form-control">
     <div *ngIf="webForm.get('temperatureCelsius')?.invalid && webForm.get('temperatureCelsius')?.touched" class="error-message">
       Temperature in Celsius is required.
     </div>
   </div>
 
-    <div class="form-group">
-    <label for="windSpeed">Wind Speed:</label>
-    <input id="windSpeed" type="number" formControlName="windSpeed">
+    <div class="form-group mb-3 col-md-3">
+    <label for="windSpeed" class="form-label">Wind Speed:</label>
+    <input id="windSpeed" type="number" formControlName="windSpeed" class="form-control">
     <div *ngIf="webForm.get('windSpeed')?.invalid && webForm.get('windSpeed')?.touched" class="error-message">
       Wind Speed is required.
     </div>
   </div>
 
-    <div class="form-group">
-    <label for="windDirection">Wind Direction:</label>
-    <input id="windDirection" type="text" formControlName="windDirection">
+    <div class="form-group mb-3 col-md-3">
+    <label for="windDirection" class="form-label">Wind Direction:</label>
+    <input id="windDirection" type="text" formControlName="windDirection" class="form-control">
     <div *ngIf="webForm.get('windDirection')?.invalid && webForm.get('windDirection')?.touched" class="error-message">
       Wind Direction is required.
     </div>
   </div>
 
-  <button type="submit" [disabled]="webForm.invalid">Submit</button>
+  <div class="row"> 
+  <div class="col-md-2">
+  <button type="submit" class="btn btn-primary" (click)="onReturn();" >Return</button>
+  </div>
+  <div class="col-md-2">
+  <button type="submit" [disabled]="webForm.invalid" class="btn btn-primary">Submit</button>
+  </div>
+  <div class="col-md-8">
+  </div>
+  </div>
+  </div>
 
 </form>
