--- a/WeatherMetricsWeb/src/app/features/weathermetricsdata/components/weathermetricsdatalist/weathermetricsdatalist.component.html
+++ b/WeatherMetricsWeb/src/app/features/weathermetricsdata/components/weathermetricsdatalist/weathermetricsdatalist.component.html
@@ -1,9 +1,10 @@
 <div>
 
-<button mat-icon-button id="btn_addweathermetriclog">
-    <mat-icon>add</mat-icon>
-</button>
+
+ <button type="submit" class="btn btn-primary" (click)="onAdd();" id="btn_addweathermetriclog" >Add</button>
   
+<div class="containerborder">
+
 <mat-table [dataSource]="weathermetricsData" class="mat-elevation-z8">
 
   
@@ -47,7 +48,7 @@
   <!-- Column -->
   <ng-container matColumnDef="EntryDate">
     <th mat-header-cell *matHeaderCellDef> Entry Date </th>
-    <td mat-cell *matCellDef="let element"> {{element.entryDate}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.entryDate | date:'yyyy-MM-dd HH:mm'}} </td>
   </ng-container>
 
   <!-- Delete -->
@@ -68,5 +69,7 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </mat-table>
+
+</div>
 
 </div>
